--- a/.editorconfig
+++ b/.editorconfig
@@ -4,10 +4,6 @@
 # WordPress Coding Standards
 # https://make.wordpress.org/core/handbook/coding-standards/
 
-# Based from https://github.com/ntwb/wp.editorconfig/blob/master/.editorconfig
-#
-# Need an IDE plugin? http://editorconfig.org/#download
-
 root = true
 
 [*]
@@ -15,15 +11,14 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_size = 4
+tab_width = 4
 indent_style = tab
 
-[*.json]
+[*.txt,wp-config-sample.php]
+trim_trailing_whitespace = false
+
+[*.{md,json,yml}]
+trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
-
-[*.yml]
-indent_style = space
-indent_size = 4
-
-[*.txt,wp-config-sample.php]
-end_of_line = crlf
