--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "npm": ">=5.0.0"
   },
   "devDependencies": {
-    "babel-core": "*",
-    "babel-eslint": "*",
-    "babel-loader": "*",
-    "babel-plugin-transform-object-rest-spread": "*",
-    "babel-plugin-transform-react-jsx": "*",
-    "babel-plugin-transform-runtime": "*",
-    "babel-preset-env": "*",
-    "cypress": "^2.1.0",
+    "@babel/core": "7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@wordpress/eslint-plugin": "3.2.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "cypress": "^3.7.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "grunt": "^1.0.3",
-    "grunt-babel": "*",
+    "grunt-babel": "^8.0.0",
     "grunt-checktextdomain": "^1.0.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compress": "^1.4.3",
@@ -26,12 +29,12 @@
     "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-webpack": "*",
+    "grunt-webpack": "3.1.3",
     "grunt-wp-i18n": "^1.0.2",
     "load-grunt-tasks": "^4.0.0",
     "matchdep": "^2.0.0",
     "querystringify": "*",
-    "webpack": "3.10.0"
+    "webpack": "^4.41.2"
   },
   "scripts": {
     "test-unit-php": "docker-compose run --rm wordpress_phpunit phpunit",
