--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
     "npm": ">=5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@wordpress/eslint-plugin": "3.2.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "@wordpress/components": "^8.4.0",
+    "@wordpress/compose": "^3.8.0",
+    "@wordpress/data": "^4.10.0",
+    "@wordpress/edit-post": "^3.9.0",
+    "@wordpress/element": "^2.9.0",
+    "@wordpress/i18n": "^3.7.0",
+    "@wordpress/plugins": "^2.8.0",
+    "@wordpress/scripts": "^6.0.0",
     "cypress": "^3.7.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
     "grunt": "^1.0.3",
     "grunt-babel": "^8.0.0",
     "grunt-checktextdomain": "^1.0.1",
@@ -33,13 +31,18 @@
     "grunt-wp-i18n": "^1.0.2",
     "load-grunt-tasks": "^4.0.0",
     "matchdep": "^2.0.0",
-    "querystringify": "*",
     "webpack": "^4.41.2"
   },
   "scripts": {
+    "build": "wp-scripts build",
+    "start": "wp-scripts start",
     "test-unit-php": "docker-compose run --rm wordpress_phpunit phpunit",
     "test-unit-php-multisite": "docker-compose run -e WP_MULTISITE=1 --rm wordpress_phpunit phpunit",
     "test-e2e": "cypress run --browser chrome",
     "test-e2e:watch": "cypress open"
+  },
+  "dependencies": {
+    "@wordpress/date": "^3.6.0",
+    "accounting": "^0.4.1"
   }
 }
