Basic building blocks of campaign page building with the block editor in place.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-wp-i18n": "^1.0.2",
     "load-grunt-tasks": "^4.0.0",
     "matchdep": "^2.0.0",
+    "react-day-picker": "^7.4.0",
     "webpack": "^4.41.2"
   },
   "scripts": {
