--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm": ">=5.0.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "cypress": "^2.1.0",
+    "grunt": "^0.4.5",
     "grunt-checktextdomain": "^0.1.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.8.0",
@@ -18,8 +19,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-wp-i18n": "~0.5.0",
     "load-grunt-tasks": "~0.2.0",
-    "matchdep": "^0.3.0",
-    "cypress": "^2.1.0"
+    "matchdep": "^0.3.0"
   },
   "scripts": {
     "test-unit-php": "docker-compose run --rm wordpress_phpunit phpunit",
