--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@wordpress/element": "^2.16.0",
     "@wordpress/i18n": "^3.14.0",
     "@wordpress/plugins": "^2.20.2",
-    "@wordpress/scripts": "^6.2.0",
+    "@wordpress/scripts": "^12.1.0",
+    "copy-webpack-plugin": "^6.1.0",
     "cypress": "^3.8.3",
+    "file-loader": "^6.1.0",
     "grunt": "^1.2.1",
     "grunt-babel": "^8.0.0",
     "grunt-checktextdomain": "^1.0.1",
@@ -31,6 +33,7 @@
     "grunt-wp-i18n": "^1.0.2",
     "load-grunt-tasks": "^4.0.0",
     "matchdep": "^2.0.0",
+    "mini-css-extract-plugin": "^0.11.2",
     "react-day-picker": "^7.4.8",
     "webpack": "^4.43.0"
   },
