--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "charitable",
-  "version": "1.6.44",
+  "version": "1.6.45-beta.1",
   "private": true,
   "engines": {
     "node": ">=8.0.0",
     "npm": ">=5.0.0"
   },
   "devDependencies": {
-    "cypress": "^2.1.0",
-    "grunt": "^0.4.5",
-    "grunt-checktextdomain": "^0.1.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-sass": "~1.0.0",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-wp-i18n": "~0.5.0",
-    "load-grunt-tasks": "~0.2.0",
-    "matchdep": "^0.3.0"
+    "cypress": "^5.2.0",
+    "grunt": "^1.3.0",
+    "grunt-checktextdomain": "^1.0.1",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-compress": "^1.6.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-sass": "~2.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-wp-i18n": "^1.0.3",
+    "load-grunt-tasks": "^5.1.0",
+    "matchdep": "^2.0.0"
   },
   "scripts": {
     "test-unit-php": "docker-compose run --rm wordpress_phpunit phpunit",
