--- a/package.json
+++ b/package.json
@@ -6,15 +6,51 @@
     "node": ">=8.0.0",
     "npm": ">=5.0.0"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "browsers": "last 2 versions",
+            "ie": "11"
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "transform-object-rest-spread",
+      "@babel/plugin-transform-react-jsx"
+    ]
+  },
+  "jest": {
+    "rootDir": "./",
+    "preset": "@wordpress/jest-preset-default",
+    "setupFiles": [
+      "<rootDir>/tests/jest/config/setup-globals"
+    ],
+    "moduleNameMapper": {
+      "@wordpress/i18n": "<rootDir>/tests/jest/mocks/i18n.js",
+      "@wordpress/element": "react",
+      "@wordpress/is-shallow-equal/objects": "//node_modules/@wordpress/is-shallow-equal/build/objects"
+    }
+  },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@testing-library/react": "^11.0.4",
     "@wordpress/components": "^8.5.0",
     "@wordpress/compose": "^3.19.2",
     "@wordpress/data": "^4.22.2",
     "@wordpress/edit-post": "^3.21.2",
     "@wordpress/element": "^2.16.0",
     "@wordpress/i18n": "^3.14.0",
+    "@wordpress/jest-preset-default": "^6.3.0",
     "@wordpress/plugins": "^2.20.2",
     "@wordpress/scripts": "^12.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "copy-webpack-plugin": "^6.1.0",
     "cypress": "^3.8.3",
     "file-loader": "^6.1.0",
@@ -31,6 +67,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-webpack": "3.1.3",
     "grunt-wp-i18n": "^1.0.2",
+    "jest": "^26.4.2",
     "load-grunt-tasks": "^4.0.0",
     "matchdep": "^2.0.0",
     "mini-css-extract-plugin": "^0.11.2",
@@ -43,7 +80,9 @@
     "test-unit-php": "docker-compose run --rm wordpress_phpunit phpunit",
     "test-unit-php-multisite": "docker-compose run -e WP_MULTISITE=1 --rm wordpress_phpunit phpunit",
     "test-e2e": "cypress run --browser chrome",
-    "test-e2e:watch": "cypress open"
+    "test-e2e:watch": "cypress open",
+    "test:unit": "wp-scripts test-unit-js",
+    "test:unit:debug": "wp-scripts --inspect-brk test-unit-js --runInBand --no-cache"
   },
   "dependencies": {
     "@wordpress/date": "^3.10.0",
