--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "wpcharitable/charitable-spamblocker": "1.0.0",
+        "wpcharitable/charitable-spamblocker": "^1.0.2",
         "composer/installers": "1.9.0"
     },
     "extra": {
