--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "charitable",
-  "version": "1.6.46-beta.1",
+  "version": "1.6.46",
   "private": true,
   "engines": {
     "node": ">=8.0.0",
